--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ejs": "~2.5.7",
     "express": "^4.17.1",
     "googleapis": "^31.0.2",
+    "mongoose": "^5.11.8",
     "morgan": "^1.9.1",
+    "node-statsd": "^0.1.1",
     "nodemon": "^2.0.6",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.5"
