--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.6",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.5",
+    "simple-xml-to-json": "^1.0.7",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
